update web set-up

--- a/index.html
+++ b/index.html
@@ -24,6 +24,34 @@
                 <img src="img/github-icon.png" alt="Github link" />
             </a>
         </div>
+        <div class="topic">
+            <div class="box">Basic Statistics about Beers</div>
+            <div class="box">Beer Style Similarities</div>
+            <div class="box">Beer Popularity and Taste Preference</div>
+            <div class="box">Beer Name, Beer Flavor</div>
+            <div class="box">Let's Recommend!</div>
+        </div>        
+
+        <!-- Edit Here -->
+        <div class="content">
+            <!-- Xinyi -->
+            <div class="content-section" id="section1">Basic Statistics about Beers Content</div>
+            <div class="content-section" id="section2">Beer Style Similarities Content</div>
+            
+            <!-- Siyuan -->
+            <div class="content-section" id="section3">Beer Popularity and Taste Preference Content
+
+            </div>
+            <!-- Zhixun -->
+            <div class="content-section" id="section4">Beer Name, Beer Flavor Content
+
+            </div>
+            <!-- Yihan -->
+            <div class="content-section" id="section5">Let's Recommend! Content
+
+            </div>
+        </div>
+        <script type="text/javascript" src="script/scroll.js"></script>
     </body>
 </body>
 </html>
