--- a/index.html
+++ b/index.html
@@ -5,53 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Crafting a Personalized Beer Landscape</title>
     <meta name="description" content="Analyzing User Preferences and Naming Impact for Guiding Targeted Recommendation">
-    <link rel="stylesheet" type="text/css" href="css/style .css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <body>
-        <div class="container">
-            <h1 class="title" id="title">Crafting a Personalized Beer 
-                <img src="img/wheat.png" alt="Wheat Icon" class="inline-icon" /> Landscape</h1>
-            <h2 class="title" id="sub-title">Analyzing User Preferences and Naming Impact for Guiding Targeted Recommendation</h2>    
-            <img src="img/bg.png" alt="long image" id="background-image">
-            <div id="names-list">
-                <p class="name">Siyuan Cheng</p>
-                <p class="name">Zhixun Chen</p>
-                <p class="name">Xinyi Ding</p>
-                <p class="name">Yihan Wang</p>
-            </div>
-            <a href="https://github.com/epfl-ada/ada-2023-project-badanalysist" id="github-link">
-                <img src="img/github-icon.png" alt="Github link" />
-            </a>
+    <img src="img/bg.png" alt="background image" id="background-image">
+
+    <div class="container">
+        <h1 class="title" id="title">Crafting a Personalized Beer 
+            <img src="img/wheat.png" alt="Wheat Icon" class="inline-icon" /> Landscape</h1>
+        <h2 class="title" id="sub-title">Analyzing User Preferences and Naming Impact for Guiding Targeted Recommendation</h2>    
+        <div id="names-list">
+            <p class="name">Siyuan Cheng</p>
+            <p class="name">Zhixun Chen</p>
+            <p class="name">Xinyi Ding</p>
+            <p class="name">Yihan Wang</p>
         </div>
+        <img src="img/people.png" alt="people" id="main-image">
+        <a href="https://github.com/epfl-ada/ada-2023-project-badanalysist" id="github-link">
+            <img src="img/github-icon.png" alt="Github link" />
+        </a>
+        <div class="scroll-prompt"><p>SCROLL</p><img class="scroll-down" src="img/arrow-down.svg"></div>
         <div class="topic">
             <div class="box">Basic Statistics about Beers</div>
             <div class="box">Beer Style Similarities</div>
             <div class="box">Beer Popularity and Taste Preference</div>
             <div class="box">Beer Name, Beer Flavor</div>
             <div class="box">Let's Recommend!</div>
-        </div>        
+        </div> 
+        <script type="text/javascript" src="script/scroll.js"></script> 
+
 
         <!-- Edit Here -->
         <div class="content">
             <!-- Xinyi -->
-            <div class="content-section" id="section1">Basic Statistics about Beers Content</div>
-            <div class="content-section" id="section2">Beer Style Similarities Content</div>
+            <div class="content-section" id="section1">Basic Statistics about Beers</div>
+            <div class="content-section" id="section2">Beer Style Similarities</div>
             
             <!-- Siyuan -->
-            <div class="content-section" id="section3">Beer Popularity and Taste Preference Content
+            <div class="content-section" id="section3">Beer Popularity and Taste Preference
 
             </div>
+
             <!-- Zhixun -->
-            <div class="content-section" id="section4">Beer Name, Beer Flavor Content
+            <div class="content-section" id="section4">Beer Name, Beer Flavor
 
             </div>
+
             <!-- Yihan -->
-            <div class="content-section" id="section5">Let's Recommend! Content
+            <div class="content-section" id="section5">Let's Recommend!
 
             </div>
         </div>
-        <script type="text/javascript" src="script/scroll.js"></script>
-    </body>
+        <script type="text/javascript" src="script/scroll.js"></script> 
+    </div>
 </body>
 </html>
