update reco-kg viz

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Analyzing User Preferences and Naming Impact for Guiding Targeted Recommendation">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/content.css">
+    <script src="script/echarts.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <img src="img/bg.png" alt="background image" id="background-image">
@@ -66,7 +68,7 @@
                         making it ideal for developing a beer recommendation system.
                     </p>
                 </div>
-                <div class="visuliz">
+                <div class="visualiz">
 
                 </div>
             </div>
@@ -100,11 +102,13 @@
                     <h3 class="slide-header">Let's Recommend!</h3>
                     <p>text</p>
                 </div>
+                <div class="visualiz"  id="reco-kg"></div>
             </div>
         </div>
     </div>
 
     <script type="text/javascript" src="script/scroll.js"></script> 
     <script type="text/javascript" src="script/click.js"></script> 
+    <script type="text/javascript" src="script/reco_kg.js"></script>
 </body>
 </html>
