--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/content.css">
     <script src="script/echarts.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
 </head>
 <body>
     <img src="img/bg.png" alt="background image" id="background-image">
@@ -39,25 +40,23 @@
         <!-- Edit Here -->
         <div class="content">
             <div class="intro" id="section0">
-                <div class="blurb">
-                    <h3 class="slide-header">Introduction</h3>
-                    <p>
-                        Embark on a journey into the secret world of beer with our project! 
-                        Dive deep into the trends and tastes of the beer world as we meticulously interpret vast datasets from BeerAdvocate and RateBeer. 
-                        Our exploration uncovers not just the popularity of beer and the influence of naming on ratings, 
-                        but also delves into the similarities between styles. Utilizing methods like K-means clustering, 
-                        sentiment analysis, and graph network modeling, we analyze over a million beer ratings to comprehensively define beer styles. 
-                        From clustering regional preferences to exploring the sentiment and language in beer names, 
-                        and studying textual similarities between beer styles, 
-                        our project merges statistical methods with natural language processing techniques to offer a multi-faceted view of the beer domain. 
-                        Our findings provide guidance for breweries and tailor recommendations for users, 
-                        considering not just popularity but also quality attributes and regional taste variations. 
-                        Join us on this fascinating journey of beer exploration!
-                    </p>
-                </div>
+                <h3 class="slide-header">Introduction</h3>
+                <p>
+                    Embark on a journey into the secret world of beer with our project! 
+                    Dive deep into the trends and tastes of the beer world as we meticulously interpret vast datasets from BeerAdvocate and RateBeer. 
+                    Our exploration uncovers not just the popularity of beer and the influence of naming on ratings, 
+                    but also delves into the similarities between styles. Utilizing methods like K-means clustering, 
+                    sentiment analysis, and graph network modeling, we analyze over a million beer ratings to comprehensively define beer styles. 
+                    From clustering regional preferences to exploring the sentiment and language in beer names, 
+                    and studying textual similarities between beer styles, 
+                    our project merges statistical methods with natural language processing techniques to offer a multi-faceted view of the beer domain. 
+                    Our findings provide guidance for breweries and tailor recommendations for users, 
+                    considering not just popularity but also quality attributes and regional taste variations. 
+                    Join us on this fascinating journey of beer exploration!
+                </p>
             </div>
 
-            <!-- Xinyi -->
+            <!-- ALL -->
             <div class="content-section" id="section1">
                 <div class="blurb" id="blurb1">
                     <h3 class="slide-header">Basic Statistics about the Beer Data</h3>
@@ -68,16 +67,35 @@
                         making it ideal for developing a beer recommendation system.
                     </p>
                 </div>
-                <div class="visualiz">
+                <div class="analysis">
+                    <p>
+                        text
+                    </p>
+                    <div id="rate-dist" class="plotly-chart"></div>
 
+                    <p>
+                        text
+                    </p>
+                    <div class="heatmap-container">
+                        <div id="heatmap1"></div>
+                        <div id="heatmap2"></div>
+                    </div>
+
+                    <p>
+                        text
+                    </p>
+                    <div id="style-pgt" class="plotly-chart"></div>
                 </div>
             </div>
 
+            <!-- Xinyi -->
             <div class="content-section" id="section2">
                 <div class="blurb" id="blurb2">
                     <h3 class="slide-header">Beer Style Similarities</h3>
                     <p>text</p>
                 </div>
+                <p>text</p>
+                <div id="similarity-heatmap" class="plotly-chart"></div>
             </div>
             
             <!-- Siyuan -->
@@ -102,6 +120,7 @@
                     <h3 class="slide-header">Let's Recommend!</h3>
                     <p>text</p>
                 </div>
+                <p>text</p>
                 <div class="visualiz"  id="reco-kg"></div>
             </div>
         </div>
@@ -110,5 +129,10 @@
     <script type="text/javascript" src="script/scroll.js"></script> 
     <script type="text/javascript" src="script/click.js"></script> 
     <script type="text/javascript" src="script/reco_kg.js"></script>
+    <script type="text/javascript" src="script/rate-dist.js"></script>
+    <script type="text/javascript" src="script/rate-heatmap1.js"></script>
+    <script type="text/javascript" src="script/rate-heatmap2.js"></script>
+    <script type="text/javascript" src="script/style-pgt.js"></script>
+    <script type="text/javascript" src="script/similarity-heatmap.js"></script>
 </body>
 </html>
