update regional analysis web

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
                     <h3 class="slide-header">Let's Recommend!</h3>
                     <p>text</p>
                 </div>
+                <div id="regional_analysis" class="plotly-chart"></div>
                 <div class="analysis">
                     <p>text</p>
                     <div class="visualiz"  id="reco-kg"></div>
@@ -243,5 +244,6 @@
     <script type="text/javascript" src="script/similarity-table.js"></script>
     <script type="text/javascript" src="script/similarity-heatmap.js"></script>
     <script type="text/javascript" src="script/user_brewery_location.js"></script>
+    <script type="text/javascript" src="script/regional_analysis.js"></script>
 </body>
 </html>
