--- a/index.html
+++ b/index.html
@@ -225,8 +225,9 @@
                     <h3 class="slide-header">Let's Recommend!</h3>
                     <p>text</p>
                 </div>
-                <div id="regional_analysis" class="plotly-chart"></div>
                 <div class="analysis">
+                    <p>text</p>
+                    <div id="regional_analysis" class="plotly-chart"></div>
                     <p>text</p>
                     <div class="visualiz"  id="reco-kg"></div>
                 </div>
