--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
                 <div class="blurb" id="blurb4">
                     <h3 class="slide-header">Beer Name, Beer Flavor</h3>
                     <p>text</p>
+                    <div id="language_dis" class="plotly-chart"></div>
                 </div>
             </div>
 
@@ -353,6 +354,7 @@
     <script type="text/javascript" src="script/regional_analysis.js"></script>
     <script type="text/javascript" src="script/radar.js"></script>
     <script type="text/javascript" src="script/feature-importance.js"></script>
+    <script type="text/javascript" src="script/language_dis.js"></script>
 </body>
 
 </html>
