--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <div class="content-section" id="section4">
                 <div class="blurb" id="blurb4">
                     <h3 class="slide-header">Beer Name, Beer Flavor</h3>
-                    <p>text</p>
+                    <p>texttexttext</p>
                     <div id="language_dis" class="plotly-chart"></div>
                 </div>
             </div>
