--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
                     <h3 class="slide-header">Beer Name, Beer Flavor</h3>
                     <p>texttexttext</p>
                     <div id="language_dis" class="plotly-chart"></div>
+                    <div class="spacing"></div>
                 </div>
             </div>
 
