--- a/index.html
+++ b/index.html
@@ -321,6 +321,9 @@
                 <div class="blurb" id="blurb4">
                     <h3 class="slide-header">Beer Name, Beer Flavor</h3>
                     <p>texttexttext</p>
+                </div>
+                <div class="analysis">
+                    <p>text</p>
                     <div id="language_dis" class="plotly-chart"></div>
                     <div class="spacing"></div>
                 </div>
