--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 </div>
             </div>
 
-            <!-- Zhixun -->
+			<!-- Zhixun -->
             <div class="content-section" id="section4">
                 <div class="blurb" id="blurb4">
                     <h3 class="slide-header">Beer Name, Beer Flavor</h3>
@@ -324,8 +324,8 @@
                 </div>
                 <div class="analysis">
                     <p>text</p>
-                    <div id="language_dis" class="plotly-chart"></div>
-                    <div class="spacing"></div>
+                    <div id="language_dis" class="plotly-chart" align="center"></div>
+					
                 </div>
             </div>
 
