--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
                 <div class="analysis">
                     <p>text</p>
                     <div id="regional_analysis" class="plotly-chart"></div>
+                    <div id="recommendation_similarity" class="plotly-chart"></div>
                     <p>text</p>
                     <div class="visualiz" id="reco-kg"></div>
                 </div>
@@ -359,6 +360,7 @@
     <script type="text/javascript" src="script/radar.js"></script>
     <script type="text/javascript" src="script/feature-importance.js"></script>
     <script type="text/javascript" src="script/language_dis.js"></script>
+    <script type="text/javascript" src="script/recommendation_similarity.js"></script>
 </body>
 
 </html>
