--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
                 <div class="analysis">
                     <p>text</p>
                     <div id="language_dis" class="plotly-chart" align="center"></div>
+		    <div id="beername" class="plotly-chart" align="center"></div>
 					
                 </div>
             </div>
@@ -361,6 +362,7 @@
     <script type="text/javascript" src="script/feature-importance.js"></script>
     <script type="text/javascript" src="script/language_dis.js"></script>
     <script type="text/javascript" src="script/recommendation_similarity.js"></script>
+    <script type="text/javascript" src="script/beername.js"></script>
 </body>
 
 </html>
