--- a/index.html
+++ b/index.html
@@ -340,6 +340,10 @@
                     <div id="regional_analysis" class="plotly-chart"></div>
                     <div id="recommendation_similarity" class="plotly-chart"></div>
                     <p>text</p>
+                    <div class="recommendation_container">
+                        <div id="recommendation_keyword"></div>
+                        <div id="recommendation_similarity"></div>
+                    </div>
                     <div class="visualiz" id="reco-kg"></div>
                 </div>
             </div>
@@ -361,6 +365,7 @@
     <script type="text/javascript" src="script/feature-importance.js"></script>
     <script type="text/javascript" src="script/language_dis.js"></script>
     <script type="text/javascript" src="script/recommendation_similarity.js"></script>
+    <script type="text/javascript" src="script/recommendation_keyword.js"></script>
 </body>
 
 </html>
