--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
                     
                     <p>text</p>
                     <div class="recommendation-container">
-                        <div id="recommendation_keyword"></div>
-                        <div id="recommendation_similarity"></div>
+                        <div id="recommendation_keyword" class="plotly-chart"></div>
+                        <div id="recommendation_similarity" class="plotly-chart"></div>
                     </div>
                     <div class="visualiz" id="reco-kg"></div>
                 </div>
