--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                         <div id="recommendation_keyword" class="plotly-chart"></div>
                         <div id="recommendation_similarity" class="plotly-chart"></div>
                     </div>
-                    <div class="visualiz" id="reco-kg"></div>
+                    <!-- <div class="visualiz" id="reco-kg"></div> -->
                 </div>
             </div>
         </div>
@@ -370,7 +370,7 @@
 
     <script type="text/javascript" src="script/scroll.js"></script>
     <script type="text/javascript" src="script/click.js"></script>
-    <script type="text/javascript" src="script/reco_kg.js"></script>
+    <!-- <script type="text/javascript" src="script/reco_kg.js"></script> -->
     <script type="text/javascript" src="script/rate-dist.js"></script>
     <script type="text/javascript" src="script/rate-heatmap1.js"></script>
     <script type="text/javascript" src="script/rate-heatmap2.js"></script>
