--- a/index.html
+++ b/index.html
@@ -364,16 +364,21 @@
                     </div>
                 </div>
             </div>
-        </div>
 
-        <section class="end-notes pt-5">
-            <h2>Sources</h2>
-            <p> RateBeer;
-                Beer Adovocate;
-                Craft Beer; 
-                Brewers Association; 
-            </p>
-        </section>
+            <div class="spacing"></div>
+            <div class="spacing"></div>
+            <div class="spacing"></div>
+            <div class="spacing"></div>
+
+            <div class="analysis">
+                <h2>Sources</h2>
+                <p> RateBeer;
+                    Beer Adovocate;
+                    Craft Beer; 
+                    Brewers Association; 
+                </p>
+            </div>
+        </div>
     </div>
 
     <script type="text/javascript" src="script/scroll.js"></script>
