--- a/index.html
+++ b/index.html
@@ -363,6 +363,10 @@
 					In subsamples from different users' locations, this positive impact of language emotion is significant for users in the United States and Canada, but not significant in Europe.
 					</p>
 					<div id="beername2" class="plotly-chart" align="center"></div>
+					<p>
+					Then, we replaced the explained variable (rating) with beer characteristics: abv, appearance, aroma, palate, and taste. We found that positive beer verbal emotions have a significant positive impact on appearance, aroma, palate, and taste, especially taste. (There is no doubt that abv is objectively unaffected.)
+					</p>
+					<div id="beername4" class="plotly-chart" align="center"></div>
 					<h4> The impact of the sentiment conveyed by beer names in various languages on ratings </h4>					
 					<p>
 					We divided the linguistic sentiment of beer names into five levels from 1 to 5. We found that, overall, the verbal sentiment of positive beer names had a significant positive impact on their ratings. Each increase in emotional level can increase the beer rating by 0.02.
@@ -371,8 +375,6 @@
 					The intersection of linguistic emotion and language shows that this positive effect of linguistic emotion is enhanced in beers named in French and Spanish. In German and Italian, negative effects are shown.
 					</p>
 					<div id="beername3" class="plotly-chart" align="center"></div>
-					<p>
-					In conclusion, positive linguistic sentiment in beer names has a significant impact on beer ratings, with particularly notable effects observed in French and Spanish beer names. This influence is especially pronounced among users in the United States and Canada.					</p>
                 </div>
             </div>
 
@@ -428,8 +430,9 @@
     <script type="text/javascript" src="script/beername.js"></script>
     <script type="text/javascript" src="script/clusters.js"></script>
     <script type="text/javascript" src="script/beername1.js"></script>
-	<script type="text/javascript" src="script/beername2.js"></script>
-	<script type="text/javascript" src="script/beername3.js"></script>
+    <script type="text/javascript" src="script/beername2.js"></script>
+    <script type="text/javascript" src="script/beername3.js"></script>
+    <script type="text/javascript" src="script/beername4.js"></script>
 </body>
 
 </html>
