--- a/index.html
+++ b/index.html
@@ -382,9 +382,10 @@
             <div class="content-section" id="section5">
                 <div class="blurb" id="blurb5">
                     <h3 class="slide-header">Let's Recommend!</h3>
-                    <p>text</p>
+                    <p>After a careful analysis on review data from beer rating platforms, we'd love to recommend beers for thirsty beer hunters based on personalized demands and different criteria. Hop on and see if you can find your dream beer with us!  </p>
                 </div>
                 <div class="analysis">
+                    <h4>Regional recommendations </h4>
                     <p>text</p>
                     <div id="regional_analysis" class="plotly-chart"></div>
 
