--- a/index.html
+++ b/index.html
@@ -382,11 +382,13 @@
             <div class="content-section" id="section5">
                 <div class="blurb" id="blurb5">
                     <h3 class="slide-header">Let's Recommend!</h3>
-                    <p>After a careful analysis on review data from beer rating platforms, we'd love to recommend beers for thirsty beer hunters based on personalized demands and different criteria. Hop on and see if you can find your dream beer with us!  </p>
+                    <p>After a careful analysis on review data from beer rating platforms, we'd love to recommend beers for thirsty beer hunters 
+                        based on personalized demands and different criteria. Hop on and see if you can find your dream beer with us!  </p>
                 </div>
                 <div class="analysis">
                     <h4>Regional recommendations </h4>
-                    <p>text</p>
+                    <p>Given the fact that large location variety present in both breweries and users, plus the significant impact of beer name language 
+                        on the ratings, we realize that people from different regions may have a different beer preference.  </p>
                     <div id="regional_analysis" class="plotly-chart"></div>
 
                     <p>text</p>
