--- a/index.html
+++ b/index.html
@@ -387,8 +387,21 @@
                 </div>
                 <div class="analysis">
                     <h4>Regional recommendations </h4>
-                    <p>Given the fact that large location variety present in both breweries and users, plus the significant impact of beer name language 
-                        on the ratings, we realize that people from different regions may have a different beer preference.  </p>
+                    <p>
+                        Given the fact that large location variety present in both breweries and users, plus the significant impact of beer name language 
+                        on the ratings, we realize that people from different regions may have a different beer preference. We hope to 
+                        Therefore, on top of simply scoring different beer dimensions, we hope that this latent complex anthropological factor embedded in geographic
+                         location can also be captured by our recommendation logic. 
+                    </p>
+                    <br>
+                    <p>
+                        To achieve this, we first grouped the reviews entries into wider world regions based on user location. To achieve a joint analysis 
+                        across different platforms tracking the same products, we mapped the same beers by assigning them a uniform ID in our matched data.
+                        As for the different style names used in different platforms, we normalized them by converting into  
+
+                    </p>
+
+                    
                     <div id="regional_analysis" class="plotly-chart"></div>
 
                     <p>text</p>
